# pyscope-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONSTITUTION.mini.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: analyzer-plan.md  constitution.md  handler-playbook.md  navigation-features.md  prior-art.md  pycg-limitations.md
src/pycg_mcp/: __init__.py  cli.py  graph.py  server.py
src/pyscope_mcp/: __init__.py  _log.py  _rpc.py  analyzer.py  cli.py  graph.py  server.py  types.py
src/pyscope_mcp/analyzer/: __init__.py  discovery.py  imports.py  misses.py  pipeline.py  resolution.py  visitor.py
tests/: conftest.py  test_analyzer_alias_stdlib.py  test_analyzer_builtin_methods.py  test_analyzer_classifier.py  test_analyzer_classifier_stdlib.py  test_analyzer_classifier_widening.py  test_analyzer_classmethod_cls.py  test_analyzer_ctor_result.py  test_analyzer_dunder_new.py  test_analyzer_external_factory.py  test_analyzer_googleapi_chain.py  test_analyzer_issue18_integration.py  test_analyzer_kind_edges.py  test_analyzer_local_var_builtin.py  test_analyzer_m1.py  test_analyzer_m2.py  test_analyzer_m3.py  test_analyzer_m4.py  test_analyzer_m5.py  test_analyzer_m6.py  test_analyzer_m7_external_whitelist.py  test_analyzer_m8.py  test_analyzer_m9.py  test_analyzer_nested_defs.py  test_analyzer_self_attr_builtin.py  test_analyzer_union_annotation.py  test_bfs_ranking_integration.py  test_commit_staleness.py  test_completeness.py  test_component_issue62.py  test_component_issue66.py  test_component_issue69.py  test_component_issue71.py  test_component_issue92.py  test_component_issue96.py  test_file_skeleton.py  test_graph.py  test_hub_suppression_integration.py  test_integration_issue66.py  test_integration_issue69.py  (+14 more)
