[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycg-mcp"
version = "0.1.0"
description = "MCP server exposing pycg function- and module-level call graphs for agentic coding over any Python repo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pycg-mcp contributors" }]
keywords = ["mcp", "pycg", "call-graph", "claude-code", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.2.0",
    "pycg>=0.0.7",
    "networkx>=3.2",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
pycg-mcp = "pycg_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/pycg-mcp"
Issues = "https://github.com/your-org/pycg-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pycg_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
