[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscope-mcp"
version = "0.1.0"
description = "MCP server exposing Python function- and module-level call graphs for agentic coding over any Python repo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pyscope-mcp contributors" }]
keywords = ["mcp", "call-graph", "claude-code", "static-analysis", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
pyscope-mcp = "pyscope_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/pyscope-mcp"
Issues = "https://github.com/your-org/pyscope-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscope_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration_wiring: wiring-tier integration tests (fast, real subprocess, stdio JSON-RPC)",
    "integration_artifact: artifact-tier integration tests (exact output, nightly or on label)",
]
